# enginebundle

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
enginebundle/: __init__.py  __main__.py  _cli.py  cs_parser.py  generator.py  unity_parser.py
tests/: test_enginebundle.py
